<?xml version="1.0"?>
<package format="2">
  <name>x500_d455</name>
  <version>0.1.0</version>
  <description>Package to include realsense d455 in x500</description>

  <maintainer email="rafael.novack07@gmail.com">Rafael Novack</maintainer>

  <license>Apache 2.0</license>

  <author email="rafael.novack07@gmail.com">Rafael Novack</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>

</package>